# product_category

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_product_py.html  z_145eef247bfb46b6_category_iterator_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_json_loader_py.html  z_145eef247bfb46b6_lawn_grass_py.html  z_145eef247bfb46b6_mixins_py.html  z_145eef247bfb46b6_order_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_smartphone_py.html
src/: BaseProduct.py  base_product.py  category.py  category_iterator.py  json_loader.py  lawn_grass.py  main.py  mixins.py  order.py  product.py  smartphone.py
tests/: conftest.py  test_category.py  test_category_iterator.py  test_main.py  test_order.py  test_product.py  test_smartphone_and_grass.py
